--- a/Note/collection/chapter2.tex
+++ b/Note/collection/chapter2.tex
@@ -3,7 +3,7 @@
     \item Tree Diagrams
     \item Counting Methods
     \begin{enumerate}
-        \item Multiplication:~$k\times n$
+        \item Multiplication:~$n\times k_1\times k_2\times \ldots$
         \item Sampling without Replacement
         \begin{enumerate}
             \item Permutation:~$\frac{n!}{(n-k)!}$
@@ -11,7 +11,7 @@
             \item Combination is Permutation without order. Combination is also called n choose k.
         \end{enumerate}
         \item Sampling with Replacement:~$n^k$
-        \item Multiple Combination:~$\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ if $n=\sum_{i=1}^{m}k_i$
+        \item Multiple Combination:~$\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ where $n=\sum_{i=1}^{m}k_i$
         \item Multiple Permutation?
     \end{enumerate}
     \item Independent Trails
