--- a/Note/main.tex
+++ b/Note/main.tex
@@ -10,7 +10,7 @@
     \input{../Format.tex}
 
 %%%% Document Information %%%%
-    \title{Recitation Week 3}
+    \title{Recitation Note}
     \author{TA: Kailong Wang}
     \date{}
 
@@ -20,5 +20,6 @@
 
 \input{collection/chapter1.tex}
 \input{collection/chapter2.tex}
+\input{collection/chapter3.tex}
 
 \end{document}
