--- a/Note/main.tex
+++ b/Note/main.tex
@@ -8,6 +8,8 @@
 
 %%%% Load Format %%%%
     \input{../Format.tex}
+    \input{../macro.tex}
+
 
 %%%% Document Information %%%%
     \title{Recitation Note}
