--- a/Quiz/main.tex
+++ b/Quiz/main.tex
@@ -8,6 +8,7 @@
 
 %%%% Load Format %%%%
     \input{../Format.tex}
+    \input{../macro.tex}
 
 %%%% Document Information %%%%
     \title{In-Recitation Quiz}
@@ -36,7 +37,7 @@ NetID: \myrule \hfill RUID: \myrule
         }
 \end{center}
 
-\input{collection/week2.tex}
+\input{collection/2.3.1.tex}
 
 \begin{stretchbox}
     Answers: \hfill
