--- a/Format.tex
+++ b/Format.tex
@@ -32,7 +32,7 @@
 % }
 % % \headsep 1.5em
 
-%%%% Additional Commands to Load %%%%
+%%%% Additional Packages to Load %%%%
 %%%% Main Font
 \usepackage[utf8]{inputenc} %enable utf8 encoding
 \usepackage{libertinus} %Very popular math font
