--- a/Note/collection/chapter2.tex
+++ b/Note/collection/chapter2.tex
@@ -1,27 +1,22 @@
 \section*{Chapter 2: Sequential Experiments}
 \begin{enumerate}
     \item Tree Diagrams
-    \item Counting Methods
+    \item Counting Methods (\textbf{Essentially the outcomes in each experiment (i.e., sample space) are equiprobable})
     \begin{enumerate}
         \item Multiplication:~$n\times k_1\times k_2\times \ldots$
         \item Sampling without Replacement
         \begin{enumerate}
-            \item Permutation:~$\frac{n!}{(n-k)!}$
-            \item Combination:~$\binom{n}{k}=\frac{n!}{k!(n-k)!}$
+            \item Permutation:~$\frac{n!}{(n-k)!}$.
+            \item Combination:~$\binom{n}{k}=\frac{n!}{k!(n-k)!}$.
             \item Combination is Permutation without order. Combination is also called n choose k.
         \end{enumerate}
         \item Sampling with Replacement:~$n^k$
         \item Multiple Combination:~$\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ where $n=\sum_{i=1}^{m}k_i$
-        \item Multiple Permutation?
     \end{enumerate}
-    \item Independent Trails
+    \item Independent Trails (\textbf{Essentially the outcomes in each sample space are not equiprobable})
     \begin{enumerate}
-        \item \textit{Theorem 2.8:} The Probability of $n_0$ failures and $n_1$ successes in $n=n_0+n_1$ Independent Trails with success rate p is \[\mathbb{P}(n_0, n_1)=\binom{n}{n_1}(1-p)^{n0}p^{n_1}=\binom{n}{n_0}(1-p)^{n0}p^{n_1}\]
-        \item \textit{Theorem 2.9:} $n=n_0+n_1+\ldots$ and success rates are $p_0, p_1,\ldots$
-    \end{enumerate}
-    \item Reliability Analysis
-    \begin{enumerate}
-        \item Components in series
-        \item Components in parallel
+        \item \textit{Theorem 2.8:} The Probability of $n_0$ failures and $n_1$ successes in $n=n_0+n_1$ Independent Trails with success rate $p$ is \[\P{n_0, n_1}=\binom{n}{n_1}(1-p)^{n0}p^{n_1}=\binom{n}{n_0}(1-p)^{n0}p^{n_1}\]
+        \item \textit{Theorem 2.9:} $n=n_0+n_1+\ldots$ and success rates are $p_0, p_1,\ldots$.
+        \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
     \end{enumerate}
 \end{enumerate}
