--- a/Note/collection/chapter3.tex
+++ b/Note/collection/chapter3.tex
@@ -1,7 +1,7 @@
 \section*{Chapter 3: Discrete Random Variables}
 \begin{enumerate}
     \item Discrete Random Variables: Assign numerical value to discrete outcomes
-    \item Probability Mass Function~(PMF): $$\sum_{x\in X}\mathbb{P}_X(x)=1$$ 
+    \item Probability Mass Function~(PMF): $$\sum_{x\in X}P_X(x)=1$$ 
     \item Families of Discrete Random Variables and their PMF{
         \begin{enumerate}
             \item Bernoulli(p): \textbf{E.g., Flip a coin}{
@@ -20,10 +20,10 @@
                 \end{cases} \]
             }
             \item Binomial(n,p): Get \textbf{x} successes in \textbf{n} Bernoulli(p) experiments $\iff$ independent trails{
-                $$P_X(x) = \binom{n}{x}p^x(1-p)^{n-x}$$
+                $$P_X(x) = \binom{n}{x}p^x(1-p)^{n-x}$$.
             }
-            \item Pascal(k,p): Get the \textbf{k-th} success at the \textbf{x-th} Bernoulli(p) experiment {
-                $$P_X(x) = \binom{x-1}{k-1}p^k(1-p)^{x-k}$$
+            \item Pascal(k,p): Get the \textbf{k-th} success at the \textbf{x-th} Bernoulli(p) experiment (This is also called Negative Binomial) {
+                $$P_X(x) = \binom{x-1}{k-1}p^k(1-p)^{x-k}$$.
             }
             \item Discrete Uniform(k,l): outcomes are uniformly distributed on range (k,l) {
                 \[ P_X(x) = 
@@ -50,7 +50,7 @@
     \item Average{
         \begin{enumerate}
             \item Mode $$P_X(x_{mod})\geq P_X(x)$$
-            \item Mdeian $$P[X\leq x_{med}]\geq 1/2 \qquad \qquad P[X\geq x_{med}]\geq 1/2$$
+            \item Medeian $$P[X\leq x_{med}]\geq 1/2 \qquad \qquad P[X\geq x_{med}]\geq 1/2$$
             \item \textcolor{red}{Expected Value:} {
                 \begin{enumerate}
                     \item Definition:{
@@ -83,7 +83,7 @@
     }
     \item Variance($\sigma_x^2$) and Standard Deviation($\sigma_x$){
         \begin{enumerate}
-            \item $\sigma_x^2=\Var(X)$ $$\Var(X)=\E{(X-\mu_x)^2}=\E{X^2-2\mu_xX+\mu_x^2}=\E{X^2}-2\mu_x\E{X}+\E{\mu_x^2}=\E{X^2}-2\mu_x^2+\mu^2=\E{X^2}-\mu_x^2$$
+            \item $\sigma_x^2=\Var(X)$ $$\Var(X)=\E{(X-\mu_x)^2}=\E{X^2-2\mu_xX+\mu_x^2}=\E{X^2}-2\mu_x\E{X}+\E{\mu_x^2}=\E{X^2}-2\mu_x^2+\mu_x^2=\E{X^2}-\mu_x^2$$
             \item $\Var(X)\geq 0$
             \item $\Var(aX+b)=a^2\Var(X)$
             \item Important Variance:{
