--- a/Quiz/main.tex
+++ b/Quiz/main.tex
@@ -1,10 +1,12 @@
 \documentclass{article}
 
 %%%% Header and Foot Information %%%%
-\newcommand\lefthead{ECE 14:332:226}
-\newcommand\righthead{Spring 2023}
-\newcommand\centerhead{Probability And Random Processes}                 
-\newcommand\leftbottom{TA: Kailong Wang}           
+\newcommand{\lefthead}{ECE 14:332:226}
+\newcommand{\centerhead}{\textbf{Probability And Random Processes}}                 
+\newcommand{\righthead}{Spring 2023}
+\newcommand{\leftbottom}{TA: Kailong Wang}   
+\newcommand{\centerbottom}{}
+\newcommand{\rightbottom}{\thepage}        
 
 %%%% Load Format %%%%
     \input{../Format.tex}
