--- a/macro.tex
+++ b/macro.tex
@@ -20,9 +20,9 @@
 % vector font
 \let\oldvec\vec
 \renewcommand*{\vec}[1]{\mathbf{#1}}
-\renewcommand*{\intercal}[1]{_{#1}{}^{\mkern-4mu\intercal}}
-\newcommand*{\trn}{^\intercal} % operator transpose
-\newcommand*{\inv}{^{-1}} %inverse
+\newcommand*{\T}{{}^{\mkern-4mu\intercal}}
+% \newcommand*{\trn}{^\intercal} % operator transpose
+% \newcommand*{\inv}{^{-1}} %inverse
 
 % number systems
 \newcommand*{\R}{\mathbb{R}}
