--- a/Note/collection/chapter2.tex
+++ b/Note/collection/chapter2.tex
@@ -7,16 +7,22 @@
         \item Sampling without Replacement
         \begin{enumerate}
             \item Permutation:~$\frac{n!}{(n-k)!}$.
-            \item Combination:~$\binom{n}{k}=\frac{n!}{k!(n-k)!}$.
+            \item Combination:~$\binom{n}{k}=\frac{n!}{k!(n-k)!}=\binom{n}{n-k}$.
             \item Combination is Permutation without order. Combination is also called n choose k.
         \end{enumerate}
         \item Sampling with Replacement:~$n^k$
-        \item Multiple Combination:~$\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ where $n=\sum_{i=1}^{m}k_i$
+        \item Multiple Combination:{
+            \begin{enumerate}
+                \item $\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ where $n=\sum_{i=1}^{m}k_i$
+                \item For the two cases situation, $n=k_1+k_2\iff \binom{n}{k_1k_2}=\frac{n!}{k_1!k_2!}\iff\binom{n}{k_1}\iff\binom{n}{k_2}$
+            \end{enumerate}
+            }
     \end{enumerate}
-    \item Independent Trails (\textbf{Essentially the outcomes in each sample space are not equiprobable})
+    \item Independent Trails (\textbf{Essentially the outcomes in each sample space are not necessarily equiprobable})
     \begin{enumerate}
-        \item \textit{Theorem 2.8:} The Probability of $n_0$ failures and $n_1$ successes in $n=n_0+n_1$ Independent Trails with success rate $p$ is \[\P{n_0, n_1}=\binom{n}{n_1}(1-p)^{n0}p^{n_1}=\binom{n}{n_0}(1-p)^{n0}p^{n_1}\]
-        \item \textit{Theorem 2.9:} $n=n_0+n_1+\ldots$ and success rates are $p_0, p_1,\ldots$.
-        \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
+        \item \textit{Theorem 2.8:} The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\P{k_0, k_1}=\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}\]
+        \item \textit{Theorem 2.9:} $n=k_1+k_2+\ldots+k_m$ and success rates are $p_1, p_2,\ldots,p_m$, where $\sum_{i=1}^{m}p_i=1$ has 
+        $$P(k_1,k_2,\ldots,k_m)=\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.$$
+        % \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
     \end{enumerate}
 \end{enumerate}
