--- a/Note/main.tex
+++ b/Note/main.tex
@@ -1,10 +1,12 @@
 \documentclass[10pt]{article}
 
 %%%% Header and Foot Information %%%%
-\newcommand\lefthead{ECE 14:332:226}
-\newcommand\righthead{Spring 2023}
-\newcommand\centerhead{Probability And Random Processes}                 
-\newcommand\leftbottom{kw414@scarletmail.rutgers.edu}           
+\newcommand{\lefthead}{ECE 14:332:226}
+\newcommand{\centerhead}{\textbf{Probability And Random Processes}}                 
+\newcommand{\righthead}{Spring 2023}
+\newcommand{\leftbottom}{kw414@scarletmail.rutgers.edu}   
+\newcommand{\centerbottom}{}
+\newcommand{\rightbottom}{\thepage}        
 
 %%%% Load Format %%%%
     \input{../Format.tex}
