--- a/Note/collection/chapter1.tex
+++ b/Note/collection/chapter1.tex
@@ -1,6 +1,6 @@
 \section*{Chapter 1: Set Theory, Probability, and Single Experiment}
 \begin{enumerate}
-    \item From Set Theory to Probability (of the single experiment)
+    \item From Set to Probability (of the single experiment)
     \begin{enumerate}
         \item~{
             \begin{center}
@@ -27,8 +27,9 @@
             \item $\P{\text{Event}}$ is the possibility that the event appears in the sample space. 
             \item $\P{\emptyset}=0$ since there is no element in \textit{null set}, and $\P{\text{Sample Space}}=1$.
     \end{enumerate}
-    \item Probability Properties
+    \item From Set Operation to Probability Operation
     \begin{enumerate}
+        \item There are three Set Operations: $A \cup B, A \cap B, A^{^\mathsf{c}}$
         \item $\P{A \cup B} = \P{A}+\P{B}-\P{A\cap B}$.
         \item \textbf{Mutually Exclusive:}~$\P{A \cap B}=0$ so that $\P{A \cup B} = \P{A}+\P{B}$.
         \item \textbf{Collectively Exhaustive:}~$\P{A\cup B}=1$.
