--- a/Note/collection/chapter2.tex
+++ b/Note/collection/chapter2.tex
@@ -22,7 +22,7 @@
     \begin{enumerate}
         \item \textit{Theorem 2.8:} The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\P{k_0, k_1}=\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}\]
         \item \textit{Theorem 2.9:} $n=k_1+k_2+\ldots+k_m$ and success rates are $p_1, p_2,\ldots,p_m$, where $\sum_{i=1}^{m}p_i=1$ has 
-        $$P(k_1,k_2,\ldots,k_m)=\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.$$
+        $$\P{k_1,k_2,\ldots,k_m}=\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.$$
         % \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
     \end{enumerate}
 \end{enumerate}
