Add engineer persepctive

--- a/Note/collection/chapter3.tex
+++ b/Note/collection/chapter3.tex
@@ -76,6 +76,7 @@
                     }
                 \end{enumerate}
             }
+            \item From an engineering perspective, \textbf{Mean (including Expectations, etc.)} is numerically easier to calculate, either using human brain or computers, than Mode and Median. 
         \end{enumerate}
     }
     \item Derived Random Variable: $Y = g(X)${
