--- a/Note/collection/chapter1.tex
+++ b/Note/collection/chapter1.tex
@@ -29,7 +29,7 @@
     \end{enumerate}
     \item From Set Operation to Probability Operation
     \begin{enumerate}
-        \item There are three Set Operations: $A \cup B, A \cap B, A^{^\mathsf{c}}$
+        \item There are three Set Operations: $A \cup B, A \cap B, A^{^\mathsf{c}}$.
         \item $\P{A \cup B} = \P{A}+\P{B}-\P{A\cap B}$.
         \item \textbf{Mutually Exclusive:}~$\P{A \cap B}=0$ so that $\P{A \cup B} = \P{A}+\P{B}$.
         \item \textbf{Collectively Exhaustive:}~$\P{A\cup B}=1$.
@@ -40,15 +40,16 @@
         \item $\condP{A}{B} = \frac{\P{AB}}{\P{B}}$.
         \item \textbf{If $A_i$ are Mutually Exclusive:}~$\condP{A}{B} = \condP{\cup_{i=1}^{N}A_i}{B} = \sum_{i=1}^{N}\condP{A_i}{B}$.
         \item \textbf{If $B_i$ are Partitions}~(Law of Total Number),
-        \begin{flalign*}
-            && \condP{A}{B} &= \frac{\P{AB}}{\P{B}} && \\
-            && &= \P{AB} && (\textrm{$B$ is Collectively Exhaustive so $P(B)=1$}) \\
-            && &= \P{A\cdot\cup_{i=1}^{N}B_i} && (\textrm{$B$ is Mutually Exclusive}) \\
-            && &= \sum_{i=1}^{N}\P{AB_i} && (\textrm{$B$ is Partition}) \\
-            && &= \sum_{i=1}^{N}\condP{A}{B_i}\P{B_i}. &&
-        \end{flalign*}
+        \begin{align}
+             \condP{A}{B} 
+             &= \frac{\P{AB}}{\P{B}}  \tag{Definition of Conditional Probability}\\
+             &= \P{AB}  \tag{$B$ is Collectively Exhaustive so $P(B)=1$} \\
+             &= \P{A\cdot\cup_{i=1}^{N}B_i}  \tag{$B$ is Mutually Exclusive} \\
+             &= \sum_{i=1}^{N}\P{AB_i}  \tag{$B$ is Partition} \\
+             &= \sum_{i=1}^{N}\condP{A}{B_i}\P{B_i}. \tag{Definition of Conditional Probability}
+        \end{align}
     \end{enumerate}
-    \item Baye's Theorem:~$\condP{A}{B} = \frac{\condP{B}{A}\P{A}}{\P{B}}$
+    \item Bayes' Theorem:~$\condP{A}{B} = \frac{\condP{B}{A}\P{A}}{\P{B}}$
     \item Independent:{
         \begin{enumerate}
             \item $\P{A\cap B}=\P{A}\P{B}$.
