--- a/Note/collection/chapter3.tex
+++ b/Note/collection/chapter3.tex
@@ -52,7 +52,7 @@
             \item In ordinary language, an \textbf{Average} is a single number taken as representative of a list of numbers.{
             \begin{enumerate}
                 \item Mode: The outcome appears the most often in the sample space \[P_X(x_{mod})\geq P_X(x)\]
-                \item Median: The outcome which separates the higher half from  the lower half of a sample space \[P_X[X < x_{med^+}] \geq 1/2 \qquad \qquad P_X[X > x_{med^-}]\geq 1/2\]
+                \item Median: The outcome which separates the higher half from  the lower half of a sample space \[P_X[X < x_{med^+}] > 1/2 \qquad \qquad P_X[X > x_{med^-}] > 1/2\]
                 \item (Arithmetic) mean:  The sum of all the outcomes divided by the number of outcomes \[\bar{x} = \frac{1}{n}\sum_{i=1}^{n}x_i\]
             \end{enumerate}
             }
@@ -77,6 +77,7 @@
                 \end{enumerate}
             }
             \item From an engineering perspective, \textbf{Mean (including Expectations, etc.)} is numerically easier to calculate, either using human brain or computers, than Mode and Median, when the sample space is humongous. 
+            \item In most cases, average, mean and expectation refer to the same concept. 
         \end{enumerate}
     }
     \item Derived Random Variable: $Y = g(X)${
