--- a/Quiz/main.tex
+++ b/Quiz/main.tex
@@ -13,7 +13,7 @@
     \input{../macro.tex}
 
 %%%% Document Information %%%%
-    \title{In-Recitation Quiz}
+    \title{In-Recitation Quiz (Cover Pset6)}
     \author{}
     \date{}
 
@@ -39,7 +39,7 @@ NetID: \myrule \hfill RUID: \myrule
         }
 \end{center}
 
-\input{collection/2.3.1.tex}
+\input{collection/Pset6.tex}
 
 \begin{stretchbox}
     Answers: \hfill
