--- a/Format.tex
+++ b/Format.tex
@@ -19,21 +19,25 @@
 
 %%%% Additional Packages to Load %%%%
 %%%% Main Font
-\usepackage[utf8]{inputenc} %enable utf8 encoding
+\usepackage{lmodern} %Computer Modern, but with many more glyphs
 \usepackage{libertinus} %Very popular math font
-\usepackage[T1]{fontenc} %I don't know what this is but it is used everywhere
+\usepackage[T1]{fontenc} %Better Printing Font
+\usepackage[utf8]{inputenc} %enable utf8 encoding
 
 %%%% Math Env
 \usepackage{amsfonts,amsmath,amssymb, amsthm}
 \usepackage{mathtools} 
-\usepackage{mleftright}  % fixes some annoying spacing issues
-\usepackage{bm} % boldface math
+\usepackage{mleftright}  %Fixes some annoying spacing issues
+\usepackage{bm} %Boldface math, load after other math font packages
 
 %%%% Others
+\usepackage[dvipsnames,svgnames]{xcolor} %Must load before tcolorbox
 \usepackage[breakable]{tcolorbox} %Customized Box
 \tcbuselibrary{skins}
 \usepackage{tabularx} %Better Table
+\usepackage{enumitem}
 \usepackage{hyperref, cleveref} %Fantastic crossrefer
+\usepackage[english]{babel}
 
 %%%% Commands to Define Homework Boxes %%%%
 %%%% A box fill the rest of the page
@@ -81,3 +85,14 @@
 %%%% New Command %%%%
 %%%% Draw a line
 \newcommand{\myrule}{\rule{1.5in}{0.1mm}}
+
+
+%%%% Define Theorem Environment
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{proposition}[theorem]{Proposition}
+\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem*{lemma}{Lemma}
+\newtheorem*{axiom}{Axiom}
+
+\theoremstyle{definition}
+\newtheorem*{definition}{Definition}
