--- a/Note/collection/chapter1.tex
+++ b/Note/collection/chapter1.tex
@@ -1,4 +1,4 @@
-\section*{Chapter 1: Set Theory, Probability, and Single Experiment}
+\chapter{Set Theory, Probability, and Single Experiment}
 \begin{enumerate}
     \item From Set to Probability (of the single experiment)
     \begin{enumerate}
@@ -31,6 +31,7 @@
     \begin{enumerate}
         \item There are three Set Operations: $A \cup B, A \cap B, A^{^\mathsf{c}}$.
         \item $\P{A \cup B} = \P{A}+\P{B}-\P{A\cap B}$.
+        \item \textbf{Union Bound:} $\P{\cup_{i=1}^N A_i}\leq \sum_{i=1}^{N}\P{A_i}$
         \item \textbf{Mutually Exclusive:}~$\P{A \cap B}=0$ so that $\P{A \cup B} = \P{A}+\P{B}$.
         \item \textbf{Collectively Exhaustive:}~$\P{A\cup B}=1$.
         \item \textbf{Partitions (i.e., Mutually Exclusive \& Collectively Exhaustive):}~$\P{\cup_{i=1}^N A_i}=\sum_{i=1}^{N}\P{A_i}=1$.
