--- a/Note/collection/chapter2.tex
+++ b/Note/collection/chapter2.tex
@@ -1,4 +1,4 @@
-\section*{Chapter 2: Sequential Experiments}
+\chapter{Sequential Experiments}
 \begin{enumerate}
     \item Tree Diagrams
     \item Counting Methods (\textbf{Essentially the outcomes in each experiment (i.e., sample space) are equiprobable})
