--- a/Quiz/main.tex
+++ b/Quiz/main.tex
@@ -30,16 +30,14 @@ NetID: \myrule \hfill RUID: \myrule
         \begin{minipage}{0.8\textwidth}
         \textbf{Quiz Instructions:}
             \begin{itemize}
-            \item For each problem, indicate your answer in the box provided. Answers indicated elsewhere will not be graded and receive a zero grade, irrespective of the correctness.
-            \item Space is provided for you to work on each problem. However, remember that there is \textbf{NO CREDIT} for showing your work.
-            \item \textbf{CREDIT} is only given for \textbf{CORRECT} answers indicated inside the box.
-            \item No partial credit is given for partially correct answers/showing work.
+            \item Indicate your answer in the box provided. Answers indicated elsewhere will not be graded and receive a zero grade, irrespective of the correctness.
+            \item \textbf{CREDIT} is only given for \textbf{CORRECT} answers and \textbf{NO PARTIAL CREDIT}.
             \end{itemize}
         \end{minipage}
         }
 \end{center}
 
-\input{collection/Pset6.tex}
+\input{collection/Pset7.tex}
 
 \begin{stretchbox}
     Answers: \hfill
