--- a/macro.tex
+++ b/macro.tex
@@ -55,3 +55,4 @@
 \newcommand*{\NegBinomv}{\mathsf{NB}}
 
 \newcommand*{\iidsim}{\stackrel{\mathrm{i.i.d.}}{\sim}}
+\newcommand*{\diff}{\,\mathrm{d}}
