--- a/Note/main.tex
+++ b/Note/main.tex
@@ -1,22 +1,22 @@
-\documentclass[10pt]{article}
+\documentclass[10pt]{report}
 
 %%%% Header and Foot Information %%%%
 \newcommand{\lefthead}{ECE 14:332:226}
 \newcommand{\centerhead}{\textbf{Probability And Random Processes}}                 
 \newcommand{\righthead}{Spring 2023}
-\newcommand{\leftbottom}{kw414@scarletmail.rutgers.edu}   
-\newcommand{\centerbottom}{}
-\newcommand{\rightbottom}{\thepage}        
+\newcommand{\leftbottom}{}   
+\newcommand{\centerbottom}{\thepage}
+\newcommand{\rightbottom}{}        
 
 %%%% Load Format %%%%
-    \input{../Format.tex}
-    \input{../macro.tex}
+\input{../Format.tex}
+\input{../macro.tex}
 
 
 %%%% Document Information %%%%
-    \title{Recitation Note}
-    \author{TA: Kailong Wang}
-    \date{}
+\title{Note}
+\author{}
+\date{}
 
 %%%% Start Document %%%%
 \begin{document}
@@ -25,5 +25,6 @@
 \input{collection/chapter1.tex}
 \input{collection/chapter2.tex}
 \input{collection/chapter3.tex}
+\input{collection/chapter4.tex}
 
 \end{document}
