--- a/Quiz/collection/Pset6.tex
+++ b/Quiz/collection/Pset6.tex
@@ -1,10 +1,12 @@
 \begin{problem}{Problem 3.5.19}
-    Let $X_n$ be the $\Binomv(n, p)$ discrete random variable. Prove that $\E{X}=np$.
+    Let $X^{[n]}$ be the $\Binomv(n, p)$ discrete random variable with $n$ trails and success rate $p$ of each trail. That says $X^{[n-1]}$ would be $\Binomv(n-1, p)$. Prove that $\E{X^{[n]}}=np$.
 
     Hint:{
         \begin{enumerate}
-            \item First show that $x\binom{n}{x}=n\binom{n-1}{x-1}$
-            \item Using the fact $\sum_{x=0}^{n-1}P_{X_{n-1}}(x)=1$
+            \item Show that $x\binom{n}{x}=n\binom{n-1}{x-1}$
+            \item Write down the PMF of $\Binomv(n, p)$
+            \item Use the Definition of $\E{X^{[n]}}$
+            \item Use the property of PMF $\sum_{x=0}^{n}P_{X^{[n]}}(x)=\sum_{x-1=0}^{n-1}P_{X^{[n-1]}}(x-1)=1$
         \end{enumerate}
     }
 \end{problem}
